--- a/main.html
+++ b/main.html
@@ -12,6 +12,32 @@
 <body>
 
 
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">Zelayn</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 	aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item">
+				<a class="nav-link" href="#">О нас</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Вакансии</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Удаленный помощник</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Контакты</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Помощь</a>
+			</li>												
+		</ul>
+	  </div>
+	</nav>
 
 
 
@@ -19,10 +45,9 @@
 
 
 
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	 <script src="script.js"></script>
 </body>
 </html>
