--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
             <img src="icons/service.svg" alt="Zelayn">
             Zelayn</a>
         <a class="main-personal-account d-none" href="#">
-            <img src="icons/avatar (2).svg" alt="Zelayn">
+            <img src="icons/avatar (2).svg" alt="Zelayn" class="mr-2">
             Личный кабинет</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -95,9 +95,34 @@
             </ul>
         </div>
     </nav>
-    <section class="container main-img">
-        <img src="img/undraw_services_5tv9.svg" alt="">
+    <section class="container main-achievement">
+        <div class="row">
+            <div class="col mb-5"><img src="img/undraw_services_5tv9.svg" alt="master-img"></div>
+            <div class="col">
+            	<div class="main-achievement-item">            		
+            		<img src="icons/balloon.svg" alt="balloon">
+            		<div class="main-achievement-item-text">
+            			<span>Ежедневной работы для стабильной связи в домах наших Абонентов</span>
+            		</div>
+            	</div>
+            	<div class="main-achievement-item">            		
+            		<img src="icons/asteroid.svg" alt="asteroid">
+            		<div class="main-achievement-item-text">
+            			<span>Интернет на космических скоростях</span>
+            		</div>
+            	</div>
+            	<div class="main-achievement-item">            		
+            		<img src="icons/star (2).svg" alt="star">
+            		<div class="main-achievement-item-text">
+            			<span>Мы постоянно растем и разрабатываем новые услуги и сервисы для Вас</span>
+            		</div>
+            	</div>            	
+            </div>
+        </div>
     </section>
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
