--- a/main.html
+++ b/main.html
@@ -99,30 +99,58 @@
         <div class="row">
             <div class="col mb-5"><img src="img/undraw_services_5tv9.svg" alt="master-img"></div>
             <div class="col">
-            	<div class="main-achievement-item">            		
-            		<img src="icons/balloon.svg" alt="balloon">
-            		<div class="main-achievement-item-text">
-            			<span>Ежедневной работы для стабильной связи в домах наших Абонентов</span>
-            		</div>
-            	</div>
-            	<div class="main-achievement-item">            		
-            		<img src="icons/asteroid.svg" alt="asteroid">
-            		<div class="main-achievement-item-text">
-            			<span>Интернет на космических скоростях</span>
-            		</div>
-            	</div>
-            	<div class="main-achievement-item">            		
-            		<img src="icons/star (2).svg" alt="star">
-            		<div class="main-achievement-item-text">
-            			<span>Мы постоянно растем и разрабатываем новые услуги и сервисы для Вас</span>
-            		</div>
-            	</div>            	
+                <div class="main-achievement-item">
+                    <img src="icons/balloon.svg" alt="balloon">
+                    <div class="main-achievement-item-text">
+                        <span>Ежедневной работы для стабильной связи в домах наших Абонентов</span>
+                    </div>
+                </div>
+                <div class="main-achievement-item">
+                    <img src="icons/asteroid.svg" alt="asteroid">
+                    <div class="main-achievement-item-text">
+                        <span>Интернет на космических скоростях</span>
+                    </div>
+                </div>
+                <div class="main-achievement-item">
+                    <img src="icons/star (2).svg" alt="star">
+                    <div class="main-achievement-item-text">
+                        <span>Мы постоянно растем и разрабатываем новые услуги и сервисы для Вас</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-
-
-
+    <section class="service container">
+        <div class="service-mobile-card mb-5">
+            <div class="row">
+                <div class="col">
+                    <div class="service-mobile-card-item justify-content-between pl-3 pt-3 pr-3">
+                        <div class="service-mobile-card-item-text">
+                            <p class="font-weight-bold">Быстрый интернет<br><span class="font-weight-normal">со скорость 500 мб/с</span></p>
+                            <button class="btn btn-outline-primary">Кабельный интернет</button>
+                        </div>
+                        <img src="icons/startup.svg" alt="internet">
+                    </div>
+                    <div class="service-mobile-card-item justify-content-between pl-3 pt-3 pr-3">
+                        <div class="service-mobile-card-item-text">
+                            <p class="font-weight-bold">Любимая передача<br><span class="font-weight-normal">в удобное время. Семейный архив</span>
+                            </p>
+                            <button class="btn btn-outline-primary">Умный дом</button>
+                        </div>
+                        <img src="icons/monitor.svg" alt="tv">
+                    </div>
+                    <div class="service-mobile-card-item justify-content-between pl-3 pt-3 pr-3">
+                        <div class="service-mobile-card-item-text">
+                            <p class="font-weight-bold">Безопасность дома<br><span class="font-weight-normal">в ваших руках, где бы вы не находились</span>
+                            </p>
+                            <button class="btn btn-outline-primary">Перемотай тв</button>
+                        </div>
+                        <img src="icons/home 2.svg" alt="home">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
