--- a/index.html
+++ b/index.html
@@ -155,27 +155,29 @@
     	
     </section> -->
     <section class="payment-mobile container-fluid mb-5 pl-3 pt-4 pr-4">
-        <h5>Пополнить баланс без комиссии</h5>
-        <form action="">
-            <div class="row flex-column mt-4">
-                <div class="col payment-item mb-3">
-                    <img src="icons/mdi_supervised_user_circle.svg" alt="user">
-                    <input class="form-control ml-3" type="text" placeholder="User1234">
+        <div class="container">
+            <h5>Пополнить баланс без комиссии</h5>
+            <form action="">
+                <div class="row flex-column mt-4">
+                    <div class="col-12 col-md-6 payment-item mb-3">
+                        <img src="icons/mdi_supervised_user_circle.svg" alt="user">
+                        <input class="col form-control ml-3" type="text" placeholder="User1234">
+                    </div>
+                    <div class="col-12 col-md-6 payment-item mb-3">
+                        <img src="icons/wallet.svg" alt="wallet">
+                        <input class="col form-control ml-3" type="text" placeholder="500 руб">
+                    </div>
                 </div>
-                <div class="col payment-item mb-3">
-                    <img src="icons/wallet.svg" alt="wallet">
-                    <input class="form-control ml-3" type="text" placeholder="500 руб">
+                <div class="form-check mt-3 p-0">
+                	<label class="col ml-4 mb-4">
+                		<input class="form-check-input" type="checkbox" value="" id="defaultCheck1">	
+                		<span>Хочу получить электронный чек на свой email</span>
+                	</label>            	
+                	<input class="btn btn-primary payment-btn ml-3" type="submit" value="Оплатить">     
+                	<a href="#" class="ml-3">Другие способы оплаты</a>
                 </div>
-            </div>
-            <div class="form-check mt-3 p-0">
-            	<label class="ml-4 mb-4">
-            		<input class="form-check-input" type="checkbox" value="" id="defaultCheck1">	
-            		<span>Хочу получить электронный чек на свой email</span>
-            	</label>            	
-            	<input class="btn btn-primary payment-btn ml-3" type="submit" value="Оплатить">     
-            	<a href="#" class="ml-3">Другие способы оплаты</a>      
-            </div>
-        </form>
+            </form>
+        </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
