--- a/main.html
+++ b/main.html
@@ -123,29 +123,29 @@
     <section class="service-mobile container">
         <div class="service-mobile-card mb-5">
             <div class="row">
-                <div class="col">
-                    <div class="service-mobile-card-item justify-content-between pl-3 pt-3 pr-3">
+                <div class="col pt-4">
+                    <div class="service-mobile-card-item justify-content-between align-items-start pl-4 pt-0 pr-4">
                         <div class="service-mobile-card-item-text">
                             <p class="font-weight-bold">Быстрый интернет<br><span class="font-weight-normal">со скорость 500 мб/с</span></p>
                             <a href="#" class="btn btn-outline-primary">Кабельный интернет</a>
                         </div>
-                        <img src="icons/startup.svg" alt="internet">
+                        <img src="icons/startup.svg" alt="internet" class="mt-2">
                     </div>
-                    <div class="service-mobile-card-item justify-content-between pl-3 pt-3 pr-3">
+                    <div class="service-mobile-card-item justify-content-between align-items-start pl-4 pt-3 pr-4">
                         <div class="service-mobile-card-item-text">
                             <p class="font-weight-bold">Любимая передача<br><span class="font-weight-normal">в удобное время. Семейный архив</span>
                             </p>
                             <a href="#" class="btn btn-outline-primary">Умный дом</a>
                         </div>
-                        <img src="icons/monitor.svg" alt="tv">
+                        <img src="icons/monitor.svg" alt="tv" class="mt-2">
                     </div>
-                    <div class="service-mobile-card-item justify-content-between pl-3 pt-3 pr-3">
+                    <div class="service-mobile-card-item justify-content-between align-items-start pl-4 pt-3 pr-4">
                         <div class="service-mobile-card-item-text">
                             <p class="font-weight-bold">Безопасность дома<br><span class="font-weight-normal">в ваших руках, где бы вы не находились</span>
                             </p>
                             <a href="#" class="btn btn-outline-primary">Перемотай тв</a>
                         </div>
-                        <img src="icons/home 2.svg" alt="home">
+                        <img src="icons/home 2.svg" alt="home" class="mt-2">
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
             		<input class="form-check-input" type="checkbox" value="" id="defaultCheck1">	
             		<span>Хочу получить электронный чек на свой email</span>
             	</label>            	
-            	<input class="btn btn-primary payment-btn ml-3" type="submit" value="Оплатить">     
+            	<input class="btn btn-primary payment-btn" type="submit" value="Оплатить">     
             	<a href="#" class="ml-3">Другие способы оплаты</a>      
             </div>
         </form>
