Fixed button styles

--- a/main.html
+++ b/main.html
@@ -154,7 +154,7 @@
     <!--     <section class="service container">
     	
     </section> -->
-    <section class="payment-mobile container-fluid mb-5 pl-3 pt-4 pr-4">
+    <section class="payment-mobile container-fluid mb-5 pl-3 pt-4 pr-4 pb-4">
         <h5>Пополнить баланс без комиссии</h5>
         <form action="">
             <div class="row flex-column mt-4">
