--- a/main.html
+++ b/main.html
@@ -121,7 +121,7 @@
         </div>
     </section>
     <section class="service-mobile container">
-        <div class="service-mobile-card mb-5">
+        <div class="service-mobile-card mb-5 pb-4">
             <div class="row">
                 <div class="col pt-4">
                     <div class="service-mobile-card-item justify-content-between align-items-start pl-4 pt-0 pr-4">
@@ -173,7 +173,7 @@
             		<span>Хочу получить электронный чек на свой email</span>
             	</label>            	
             	<input class="btn btn-primary payment-btn" type="submit" value="Оплатить">     
-            	<a href="#" class="ml-3">Другие способы оплаты</a>      
+            	<a href="#" class="ml-2">Другие способы оплаты</a>      
             </div>
         </form>
     </section>
