Fixed indentation in buttons
Fixed indentation in buttons ("News", "Comments" sections").

--- a/main.html
+++ b/main.html
@@ -188,7 +188,7 @@
                 <p>Уважаемые Абоненты! В нашей сети запущено ещё несколько новых телеканалов: с развлекательным контентом ТНТ HD и Диалоги о рыбалке, спортивный Старт HD, новостной Russia Today, на тестовый период запущены для детей СТС kids и киноканал Ultra HD Cinema, а также заменили SD-версию 1 телеканала Blue Hustler на HD-версию. Искренне надеемся, что вы получите удовольствие от новых телеканалов. Желаем приятного просмотра! Остались вопросы? Обязательно позвоните нам на бесплатный номер: 8-800-5500-800. Мы работаем...</p>
             </div>
             <div class="col-12 col-md-12 col-lg-6 col-xl-6 pb-4">
-                <div class="main-news-item d-flex mb-2">
+                <div class="main-news-comments-item d-flex mb-2">
                     <h2>Отзывы</h2>
                     <button type="button" class="btn btn-outline-dark badge-pill mt-2 ml-3">Все отзывы</button>
                 </div>
@@ -228,5 +228,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
-
 </html>
