--- a/main.html
+++ b/main.html
@@ -152,8 +152,23 @@
             </div>
         </div>
     </section>
-    <!--     <section class="service container">
-        
+<!--     <section class="service-desktop container-fluid">
+        <div class="row">
+            <div class="col service-desktop-card-item">
+                <div>
+                    <div class="service-desktop-card-item-text">
+                        <p class="font-weight-bold">Быстрый интернет<br><span class="font-weight-normal">со скорость 500 мб/с</span></p>
+                        <a href="#" class="btn btn-outline-primary">Кабельный интернет</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col service-desktop-card-item">
+
+            </div>
+            <div class="col service-desktop-card-item">
+
+            </div>
+        </div>
     </section> -->
     <section class="payment-mobile container-fluid pl-3 pt-4 pr-4 pb-4">
         <h5>Пополнить баланс без комиссии</h5>
@@ -220,12 +235,13 @@
                 <span class="font-weight-bold">8 800 5500 800</span>
             </div>
         </div>
-        <p class="mt-4 text-center font-weight-bold">© Zelayn, работаем с 1997 г.</p>        
-        <p class="mt-3 text-center font-weight-bold">Подключенных домов: 2391 Квартир в домах: 182038</p>        
+        <p class="mt-4 text-center font-weight-bold">© Zelayn, работаем с 1997 г.</p>
+        <p class="mt-3 text-center font-weight-bold">Подключенных домов: 2391 Квартир в домах: 182038</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
