--- a/tariffs.html
+++ b/tariffs.html
@@ -101,7 +101,7 @@
             <div class="col-9">
                 <p class="font-weight-bold pb-2">Быстрый кабельный интернет</p>
             </div>
-            <div class="col-3"><img src="icons/undraw_speed_test_wxl0.svg" alt="internet"></div>
+            <div class="col-3 d-flex justify-content-center mt-1"><img src="icons/undraw_speed_test_wxl0.svg" alt="internet"></div>
         </div>
     </div>
     <section class="container-fluid mobile-slaider-tariffs-wrapper">
@@ -189,6 +189,99 @@
             </div>
         </div>
     </section>
+    <div class="container tariffs-item mt-5">
+        <div class="row d-flex align-items-start">
+            <div class="col-8">
+                <p class="font-weight-bold pb-2 mr-4 mt-1">+ Перемотай ТВ</p>
+            </div>
+            <div class="col-4 d-flex justify-content-end"><img src="icons/undraw_monitor_iqpq.svg" alt="internet"></div>
+        </div>
+    </div>    
+    <section class="container-fluid mobile-slaider-tariffs-wrapper">
+        <div class="row mobile-slaider-tariffs d-flex p-3 pb-4">
+            <div class="container mobile-slaider-tariffs-item col-10 mr-4 pt-3 pr-2">
+                <div class="row">
+                    <div class="col">
+                        <span>Тарифный план:</span>
+                        <span class="font-weight-bold blue">ТвИн гига</span>
+                        <div class="mt-3 mb-3">
+                            <img src="icons/Group.svg" alt="TV">
+                            <span class="font-weight-bold">139</span>
+                            <span>(36HD)</span>
+                        </div>
+                        <span>Абонетская плата:</span>
+                        <span class="font-weight-bold">40 р/день</span>
+                    </div>
+                    <div class="col">
+                        <span>Скорость:</span>
+                        <p class="font-weight-bold blue">500 мбит/с</p>
+                        <div class="mb-4">
+                            <img src="icons/icon.svg" alt="TV">
+                            <span class="font-weight-bold">7 дней</span>
+                        </div>
+                        <span class="font-weight-bold mobile-slaider-tariffs-item-price ml-3">500 </span><span>руб</span>
+                    </div>
+                </div>
+                <div class="w-100 d-flex justify-content-center pt-2">
+                    <button type="button" class="btn btn-primary mt-1">Выбрать</button>
+                </div>
+            </div>
+            <div class="container mobile-slaider-tariffs-item col-10 mr-4 pt-3 pr-2">
+                <div class="row">
+                    <div class="col">
+                        <span>Тарифный план:</span>
+                        <span class="font-weight-bold blue">ТвИн макси</span>
+                        <div class="mt-3 mb-3">
+                            <img src="icons/Group.svg" alt="TV">
+                            <span class="font-weight-bold">139</span>
+                            <span>(36HD)</span>
+                        </div>
+                        <span>Абонетская плата:</span>
+                        <span class="font-weight-bold">35 р/день</span>
+                    </div>
+                    <div class="col">
+                        <span>Скорость:</span>
+                        <p class="font-weight-bold blue">250 мбит/с</p>
+                        <div class="mb-4">
+                            <img src="icons/icon.svg" alt="TV">
+                            <span class="font-weight-bold">7 дней</span>
+                        </div>
+                        <span class="font-weight-bold mobile-slaider-tariffs-item-price ml-3">500 </span><span>руб</span>
+                    </div>
+                </div>
+                <div class="w-100 d-flex justify-content-center pt-2">
+                    <button type="button" class="btn btn-primary mt-1">Выбрать</button>
+                </div>
+            </div>
+            <div class="container mobile-slaider-tariffs-item col-10 mr-3 pt-3 pr-2">
+                <div class="row">
+                    <div class="col">
+                        <span>Тарифный план:</span>
+                        <span class="font-weight-bold blue">ТвИн +</span>
+                        <div class="mt-3 mb-3">
+                            <img src="icons/Group.svg" alt="TV">
+                            <span class="font-weight-bold">139</span>
+                            <span>(36HD)</span>
+                        </div>
+                        <span>Абонетская плата:</span>
+                        <span class="font-weight-bold">30 р/день</span>
+                    </div>
+                    <div class="col">
+                        <span>Скорость:</span>
+                        <p class="font-weight-bold blue">100 мбит/с</p>
+                        <div class="mb-4">
+                            <img src="icons/icon.svg" alt="TV">
+                            <span class="font-weight-bold">7 дней</span>
+                        </div>
+                        <span class="font-weight-bold mobile-slaider-tariffs-item-price ml-3">500 </span><span>руб</span>
+                    </div>
+                </div>
+                <div class="w-100 d-flex justify-content-center pt-2">
+                    <button type="button" class="btn btn-primary mt-1">Выбрать</button>
+                </div>
+            </div>
+        </div>
+    </section>    
     <footer class="footer container-fluid pt-4 pb-3">
         <div class="row">
             <div class="col footer-logo">
