Add section "Smart home".
Added a new section "Smart home"on the page "Tariffs" for mobile devices.

--- a/tariffs.html
+++ b/tariffs.html
@@ -282,6 +282,28 @@
             </div>
         </div>
     </section>    
+    <div class="container tariffs-item mt-5">
+        <div class="row d-flex align-items-start">
+            <div class="col">
+                <p class="font-weight-bold pb-2 mr-4 mt-1">Умный дом</p>
+            </div>
+            <div class="col d-flex justify-content-end"><img src="icons/undraw_smart_home_28oy.svg" alt="internet"></div>
+        </div>
+    </div> 
+    <section class="container pt-2">
+        <p>Умный дом — наблюдает за Вашей квартирой 24 часа в сутки 7 дней в неделю.</p>
+        <span>Предупредит Вас в случае:</span><br>
+        <span>- протечки воды;</span><br>
+        <span>- открытия двери или окна;</span><br>
+        <span>- задымлении.</span><br>
+        <span>Пришлет PUSH-сообщение <br>или включит звуковую сирену.</span>
+        <div class="w-100 d-flex justify-content-center">
+           <span class="font-weight-bold blue mt-3 ml-5">Безопасность дома</span>            
+        </div>   
+        <div class="w-100 d-flex justify-content-end">
+            <span class="mr-4">в ваших руках</span>                       
+        </div> 
+    </section>    
     <footer class="footer container-fluid pt-4 pb-3">
         <div class="row">
             <div class="col footer-logo">
