Add a form to the "Smart home"
Added a form to the "Smart home" section on the "Tariffs" page for mobile devices.

--- a/tariffs.html
+++ b/tariffs.html
@@ -298,12 +298,25 @@
         <span>- задымлении.</span><br>
         <span>Пришлет PUSH-сообщение <br>или включит звуковую сирену.</span>
         <div class="w-100 d-flex justify-content-center">
-           <span class="font-weight-bold blue mt-3 ml-5">Безопасность дома</span>            
+           <span class="font-weight-bold blue mt-3 ml-4">Безопасность дома</span>            
         </div>   
-        <div class="w-100 d-flex justify-content-end">
-            <span class="mr-4">в ваших руках</span>                       
+        <div class="w-100 d-flex justify-content-end mb-3">
+            <span class="mr-5">в ваших руках</span>                       
         </div> 
-    </section>    
+        <p>Позвоните мне, пожалуйста, и расскажите об услуге Умный дом от POWERNET</p>
+        <form action="" class="smart-home-form">
+            <div class="row flex-column mt-4">
+                <div class="col-11 mb-3">                    
+                    <input class="form-control" type="text" placeholder="ФИО">
+                </div>
+                <div class="col-11 mb-4">                    
+                    <input class="form-control" type="text" placeholder="+7(___) ___-__-__">
+                </div>
+            </div>            
+            <input class="btn btn-primary" type="submit" value="Позвонить мне">
+            <a href="#" class="ml-2">Посетить страничку умного дома</a>            
+        </form>        
+    </section>        
     <footer class="footer container-fluid pt-4 pb-3">
         <div class="row">
             <div class="col footer-logo">
