--- a/tariffs.html
+++ b/tariffs.html
@@ -104,9 +104,9 @@
             <div class="col-3 d-flex justify-content-center mt-1"><img src="icons/undraw_speed_test_wxl0.svg" alt="internet"></div>
         </div>
     </div>
-    <section class="container-fluid mobile-slaider-tariffs-wrapper">
-        <div class="row mobile-slaider-tariffs d-flex p-3 pb-4">
-            <div class="container mobile-slaider-tariffs-item col-10 mr-4 pt-3 pr-2">
+    <section class="container-fluid mobile-slider-tariffs-wrapper">
+        <div class="row mobile-slider-tariffs d-flex p-3 pb-4">
+            <div class="container mobile-slider-tariffs-item col-10 mr-4 pt-3 pr-2">
                 <div class="row">
                     <div class="col">
                         <span>Тарифный план:</span>
@@ -126,14 +126,14 @@
                             <img src="icons/icon.svg" alt="TV">
                             <span class="font-weight-bold">7 дней</span>
                         </div>
-                        <span class="font-weight-bold mobile-slaider-tariffs-item-price ml-3">500 </span><span>руб</span>
+                        <span class="font-weight-bold mobile-slider-tariffs-item-price ml-3">500 </span><span>руб</span>
                     </div>
                 </div>
                 <div class="w-100 d-flex justify-content-center pt-2">
                     <button type="button" class="btn btn-primary mt-1">Выбрать</button>
                 </div>
             </div>
-            <div class="container mobile-slaider-tariffs-item col-10 mr-4 pt-3 pr-2">
+            <div class="container mobile-slider-tariffs-item col-10 mr-4 pt-3 pr-2">
                 <div class="row">
                     <div class="col">
                         <span>Тарифный план:</span>
@@ -153,14 +153,14 @@
                             <img src="icons/icon.svg" alt="TV">
                             <span class="font-weight-bold">7 дней</span>
                         </div>
-                        <span class="font-weight-bold mobile-slaider-tariffs-item-price ml-3">500 </span><span>руб</span>
+                        <span class="font-weight-bold mobile-slider-tariffs-item-price ml-3">500 </span><span>руб</span>
                     </div>
                 </div>
                 <div class="w-100 d-flex justify-content-center pt-2">
                     <button type="button" class="btn btn-primary mt-1">Выбрать</button>
                 </div>
             </div>
-            <div class="container mobile-slaider-tariffs-item col-10 mr-3 pt-3 pr-2">
+            <div class="container mobile-slider-tariffs-item col-10 mr-3 pt-3 pr-2">
                 <div class="row">
                     <div class="col">
                         <span>Тарифный план:</span>
@@ -180,7 +180,7 @@
                             <img src="icons/icon.svg" alt="TV">
                             <span class="font-weight-bold">7 дней</span>
                         </div>
-                        <span class="font-weight-bold mobile-slaider-tariffs-item-price ml-3">500 </span><span>руб</span>
+                        <span class="font-weight-bold mobile-slider-tariffs-item-price ml-3">500 </span><span>руб</span>
                     </div>
                 </div>
                 <div class="w-100 d-flex justify-content-center pt-2">
@@ -197,9 +197,9 @@
             <div class="col-4 d-flex justify-content-end"><img src="icons/undraw_monitor_iqpq.svg" alt="internet"></div>
         </div>
     </div>    
-    <section class="container-fluid mobile-slaider-tariffs-wrapper">
-        <div class="row mobile-slaider-tariffs d-flex p-3 pb-4">
-            <div class="container mobile-slaider-tariffs-item col-10 mr-4 pt-3 pr-2">
+    <section class="container mobile-slider-tariffs-wrapper">
+        <div class="row mobile-slider-tariffs d-flex p-3 pb-4">
+            <div class="container mobile-slider-tariffs-item col-10 mr-4 pt-3 pr-2">
                 <div class="row">
                     <div class="col">
                         <span>Тарифный план:</span>
@@ -219,14 +219,14 @@
                             <img src="icons/icon.svg" alt="TV">
                             <span class="font-weight-bold">7 дней</span>
                         </div>
-                        <span class="font-weight-bold mobile-slaider-tariffs-item-price ml-3">500 </span><span>руб</span>
+                        <span class="font-weight-bold mobile-slider-tariffs-item-price ml-3">500 </span><span>руб</span>
                     </div>
                 </div>
                 <div class="w-100 d-flex justify-content-center pt-2">
                     <button type="button" class="btn btn-primary mt-1">Выбрать</button>
                 </div>
             </div>
-            <div class="container mobile-slaider-tariffs-item col-10 mr-4 pt-3 pr-2">
+            <div class="container mobile-slider-tariffs-item col-10 mr-4 pt-3 pr-2">
                 <div class="row">
                     <div class="col">
                         <span>Тарифный план:</span>
@@ -246,14 +246,14 @@
                             <img src="icons/icon.svg" alt="TV">
                             <span class="font-weight-bold">7 дней</span>
                         </div>
-                        <span class="font-weight-bold mobile-slaider-tariffs-item-price ml-3">500 </span><span>руб</span>
+                        <span class="font-weight-bold mobile-slider-tariffs-item-price ml-3">500 </span><span>руб</span>
                     </div>
                 </div>
                 <div class="w-100 d-flex justify-content-center pt-2">
                     <button type="button" class="btn btn-primary mt-1">Выбрать</button>
                 </div>
             </div>
-            <div class="container mobile-slaider-tariffs-item col-10 mr-3 pt-3 pr-2">
+            <div class="container mobile-slider-tariffs-item col-10 mr-5 pt-3 pr-2">
                 <div class="row">
                     <div class="col">
                         <span>Тарифный план:</span>
@@ -273,7 +273,7 @@
                             <img src="icons/icon.svg" alt="TV">
                             <span class="font-weight-bold">7 дней</span>
                         </div>
-                        <span class="font-weight-bold mobile-slaider-tariffs-item-price ml-3">500 </span><span>руб</span>
+                        <span class="font-weight-bold mobile-slider-tariffs-item-price ml-3">500 </span><span>руб</span>
                     </div>
                 </div>
                 <div class="w-100 d-flex justify-content-center pt-2">
